styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');

body {
    font-family: 'Montserrat', sans-serif;

   
    
}
nav {
    display: flex;
    flex-direction: row-reverse;
    background-color: rgb(93, 93, 167);
    justify-content: right;
    align-items: center;
    gap: 1rem;
    padding: 1rem;
   
}

nav a {
    color:white
}





main {
    max-width: 760px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    margin: 0 auto;
    justify-content: center;
    align-items: center;
    padding-top:30px;
    padding-bottom: 30px;
   
}

#my-pic {
    border-radius: 5px;
    box-shadow: 5px 5px 15px black;
    height: 215px;
    width: 180px;
    

}

#my-name {
    margin: auto;
    padding-right: 190px;
}

#learning-activities {
    grid-column: 1/2;
    grid-row: 1/3;
}

#project {
    grid-column: 2/3;
    grid-row: 1/2;
}

#information {
    grid-column: 2/3;
    grid-row: 2/3;
}

.card {
    box-shadow: 5px 5px 15px;
    border-radius: 35px 20px 20px 10px;
    text-align: left;
    margin:10px;
    background-color: lightgrey;
}

.card p {
    padding-left: 15px;
    padding-bottom: 5px;
}

.card h3 {
    background-color: rgb(93, 93, 167);
    border-radius: 20px 20px 0 0;
    /* box-shadow: 5px 5px 15px; */
    padding: 10px;
    width: 300px;
    text-align: center;
    
}

section {
    max-width: 320px;
}



#main-h2 {
    margin:0 auto;
    text-align: center;
    padding-top: 20px;
  
}




a {
    color:black;
}

header {
    display: flex;
    padding: 1rem;
    background-color: lightgrey;
   
   
    }
    
  

ul {
    list-style-type: none;
}

footer {
    background-color: rgb(93, 93, 167);
    color:white;
    padding: 0.5rem;
    bottom: 0;
    width: 100%;
   
   
   
}

